--- a/twine.html
+++ b/twine.html
@@ -20,7 +20,7 @@ body, tw-story
 }
 </style><script role="script" id="twine-user-script" type="text/twine-javascript">
 
-</script><tw-passagedata pid="1" name="Start" tags="" position="66.99999999999997,0" size="100,100">&lt;img src=&quot;images/J1.png&quot; width=&quot;500&quot; height=&quot;250&quot; alt=&quot;이미지를 못 읽어올 때 표시되는 텍스트&quot;&gt;
+</script><tw-passagedata pid="1" name="Start" tags="" position="66.99999999999997,0" size="100,100">&lt;img src=&quot;images/J1.&quot; width=&quot;500&quot; height=&quot;250&quot; alt=&quot;이미지를 못 읽어올 때 표시되는 텍스트&quot;&gt;
 
 [[시작하기 -&gt;N_1]]</tw-passagedata><tw-passagedata pid="2" name="WaitingQue" tags="WaitingQue" position="487,192" size="100,100">{
 (live: 0.5s)[
